--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "arrow-parens": "off",
     "no-unused-vars": "off",
-    "no-unused-expressions" : "off"
+    "no-unused-expressions" : "off",
+    "no-nested-ternary" : "off"
   }
 }
