--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,18 @@
 {
   "env": {
     "browser": true,
-    "es6": true
-  },
-  "extends": ["airbnb-base"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "es6": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "extends": ["airbnb-base"],
   "rules": {
-    "arrow-parens": "off",
-    "no-unused-vars": "off",
-    "no-unused-expressions" : "off",
-    "no-nested-ternary" : "off"
+    "no-shadow": "off",
+    "no-param-reassign": "off",
+    "eol-last": "off",
+    "arrow-parens": "off"
   }
 }
